ca: Fix visibility conditions of Registration button.

--- a/public/static/stylesheets/home.style.css
+++ b/public/static/stylesheets/home.style.css
@@ -155,7 +155,7 @@
 .parallax > .footer > .contact {
   color: #fff;
   font-weight: 400;
-  width: 10em;
+  width: 12em;
   text-align: center;
   text-transform: uppercase;
 }
